# Esercitazione_2_OOP

./: CMakeLists.txt  complex_number.hpp  rational.hpp
Esercizio2/: rational.cpp  stack.cpp  stack_template.cpp  stack_template_better.cpp
